# staticmediator

./: CMakeLists.txt  README.md  conanfile.py  main.cpp
include/: staticmediator.hpp
src/: test.cpp
